# Tech-Architect-Agent

./: .env.example  .gitignore  AGENTS.md  Houram.md  README.md  pyproject.toml
.cursor/rules/: tech-architect-agent.mdc
config/: knowledge_sources.yaml
knowledge/: libzone_technical_context.md  ordelex_technical_context.md
projects/: README.md
projects/LibZone/: README.md
projects/LibZone/.houram/: .gitignore  PROJECT_CONTEXT.md  knowledge_sources.yaml
prompts/: tech_architect_agent.md
rules/: houram-project-rule.mdc  houram-user-rule.md
scripts/mac/: install_launch_agent.sh  refresh_knowledge_index.sh  uninstall_launch_agent.sh
src/tech_architect_agent/: __init__.py  cli.py
templates/: PROJECT_CONTEXT.md  knowledge_sources.yaml
